fix(ga): fix overflow

--- a/packages/webapp/src/webview/ui/components/Header/Filters/Filters.scss
+++ b/packages/webapp/src/webview/ui/components/Header/Filters/Filters.scss
@@ -1,3 +1,7 @@
+.dialog-filter .ms-Dialog-content {
+    overflow: hidden;
+}
+
 ul.filter-list {
     list-style-type: none;
     padding-left: 0px;
